Revert "fixato warning opengl"